consulta retornando aprovações pendentes
