# src/main/java/br/com/reclamei/company/entrypoint/api/mapper/CompanyApiMapper.java
@@ -9,6 +9,8 @@ import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.ReportingPolicy;
 
+import java.util.List;
+
 @Mapper(componentModel = "spring", unmappedTargetPolicy = ReportingPolicy.IGNORE)
 public interface CompanyApiMapper {
 
@@ -21,4 +23,5 @@ public interface CompanyApiMapper {
 
     CompanyResponse toResponse(CompanyDetailsDomain domain);
 
+    List<CompanyResponse> toResponse(List<CompanyDomain> companiesPendingApproval);
 }
